# tock

./: .gitattributes  .gitignore  .gitmodules  .lcignore  .travis-deploy-netlify  .travis-install-gcc  .travis.yml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Common.mk  Compilation.md  IEEE802154_CHANGELOG.md  Makefile  Makefile.common  NOTICE  NRF.md  OWNERS  PRESUBMIT.cfg  README.az.md  README.md  README.tr.md  SECURITY.md  Thread_Stack_Design.txt  async_hwci.py  bors.toml  cortex_m0_mpy121666.s  demo.txt  flux.toml  hwci.py  netlify.toml  program-nrf  rust-toolchain  rust-toolchain.toml  rustfmt.toml  shell.nix
arch/cortex-m0p/: Cargo.toml  README.md
arch/cortex-m33/: Cargo.toml  README.md
arch/riscv/: Cargo.toml  README.md
arch/rv32i/: Cargo.toml  README.md
arch/x86/: Cargo.toml  README.md  build.rs
boards/acd52832/: Cargo.toml  Makefile  README.md  layout.ld
boards/arty-e21/: Cargo.toml  Makefile  README.md  arty-openocd-jlink.cfg  digilent_arty.cfg  layout.ld
boards/arty_e21/: Cargo.toml  Makefile  README.md  build.rs  layout.ld
boards/build_scripts/: Cargo.toml  README.md  tock_kernel_layout.ld
boards/clue_nrf52840/: Cargo.toml  Makefile  README.md  layout.ld
boards/components/: Cargo.toml  README.md
boards/cy8cproto_62_4343_w/: Cargo.toml  Makefile  README.md  layout.ld  openocd.cfg  openocd.flash  openocd.gdb
boards/discovery_f412g/: Cargo.toml  Makefile  README.md  openocd.cfg
boards/ek-tm4c1294xl/: Cargo.toml  Makefile  Makefile-app  README.md  chip_layout.ld  openocd.cfg
boards/esp32-c3-devkitM-1/: Cargo.toml  Makefile  README.md  layout.ld  run.sh
boards/hail/: Cargo.toml  Makefile  Makefile-app  README.md  build.rs  chip_layout.ld  connect.cfg  layout.ld  rust-toolchain.toml
boards/hifive1/: Cargo.toml  Makefile  README.md  hifive1-openocd.cfg  layout.ld
boards/hifive_inventor/: Cargo.toml  Makefile  README.md  layout.ld
boards/host_emulation/: Cargo.toml  Makefile  README.md
boards/imix/: Cargo.toml  Makefile  Makefile-app  README.md  Xargo.toml  build.rs  chip_layout.ld  connect.cfg  err.txt  layout.ld  sam4l.json
boards/imxrt1050-evkb/: Cargo.toml  MIMXRT1052xxxxB.xml  MIMXRT1052xxxxB_part.xml  Makefile  README.md  boot_header  build.rs  chip_layout.ld  hdr  hdr.s  layout.ld  old-hdr  output.binary
boards/launchxl/: Cargo.toml  Makefile  Makefile-app  README.md  chip_layout.ld  flash-ccfg.jlink  flash-ccfg.openocd  flash-kernel.jlink  flash-kernel.openocd  layout.ld  shell.nix
capsules/: Cargo.toml  README.md
capsules/aes_ctr/: Cargo.toml  README.md
capsules/aes_gcm/: Cargo.toml  README.md
capsules/auto/: Cargo.toml  README.md
capsules/core/: Cargo.toml  README.md
capsules/cyw4343/: Cargo.toml  README.md
capsules/ecdsa_sw/: Cargo.toml  README.md
capsules/examples/: traitobj_list.rs
capsules/extra/: Cargo.toml  README.md
capsules/rsa_sw/: Cargo.toml  README.md
capsules/src/: FXOS8700CQ.rs  adc.rs  adc_microphone.rs  adc_syscall.rs  aes.rs  aes_ccm.rs  air_quality.rs  alarm.rs  ambient_light.rs  analog_comparator.rs  analog_sensor.rs  apds9960.rs  app_flash_driver.rs  at_commands_driver.rs  ble.rs  ble_adv.rs  ble_advertising_driver.rs  block_storage_driver.rs  bme280.rs  bmp280.rs  bus.rs  button.rs  buzzer.rs  buzzer_driver.rs  buzzer_pwm.rs  callback_swap_test.rs  can.rs  ccs811.rs  console.rs  console_mux.rs  console_ordered.rs  crc.rs  crypto.rs  ctap.rs  dac.rs  date_time.rs  debug_process_restart.rs  debug_process_status.rs  driver.rs  embedded_flash.rs  (+141 more)
capsules/system/: Cargo.toml  README.md
capsules/tutorials/: Cargo.toml
caut-rust/: Cargo.toml
caut-rust/src/: msg.rs
kernel/: Cargo.toml  README.md
kernel-async/: Cargo.toml  README.md
kernel-async/src/: delay.rs  executor.rs  lib.rs
kernel/.liquid/: out.smt2
kernel/derive-no-clock-control/: Cargo.toml
kernel/derive-no-peripheral-management/: Cargo.toml  README.md
kernel/src/: appid.rs  callback.rs  capabilities.rs  capability_ptr.rs  capsule_deferred_call.rs  cheri.rs  component.rs  config.rs  console.rs  container.rs  core_local.rs  debug.rs  deferred_call.rs  deferred_call2.rs  driver.rs  driver_registry.rs  dynamic_binary_flashing.rs  dynamic_binary_storage.rs  dynamic_deferred_call.rs  dynamic_process_loading.rs  dynamic_process_metadata.rs  errorcode.rs  flux_specs.rs  grant.rs  ikc.rs  image.rs  introspection.rs  ipc.rs  kernel.rs  lib.rs  mem.rs  memop.rs  memory_manager.rs  metaptr.rs  net_permissions.rs  passthrough.rs  platform.rs  polyfill.rs  process.rs  process_array.rs  (+28 more)
secure-boot/: Cargo.toml  Makefile  README.md  Readme.md  bootloader_layout.ld
secure-boot/common/: Cargo.toml  README.md
tests/: :w  Cargo.toml  README.md
tests/queue/: Cargo.toml  README.md
tests/src/: lib.rs
tools/: .gitignore  Cargo.toml  Makefile.mk  README.md  build-all-docs.sh  build-arm-binutils  build-arm-gcc  build-arm-gdb  build_all_docs.sh  check-all-links.sh  check-for-readmes.sh  check_boards_readme.py  check_capsule_readme.py  check_format.sh  check_process_console.py  check_wildcard_imports.sh  diff_memory_usage.py  embedded_data_analyzer.py  embedded_data_visualizer.py  find_panics.py  find_panics.sh  find_panics_quiet.sh  gdbinit_pca10028.jlink  gen_x86_handler_stubs.py  generate_syscall_library.py  github_actions_size_changes.sh  install_cargo_fmt.sh  jdbserver_pca10028.sh  list_archs.sh  list_boards.sh  list_chips.sh  list_lock.sh  list_tools.sh  nRF51_codegen.py  netlify-build.sh  post_size_changes_to_github.sh  print_binary_sizes.sh  print_tock_memory_usage.py  requirements.txt  run_cargo_fix.sh  (+10 more)
tools/alert_codes/: Cargo.toml
tools/board-runner/: Cargo.toml  README.md
tools/ci/: check-for-readmes.sh  check_format.sh  github_actions_size_changes.sh  netlify-build.sh
tools/debugging-and-development/: check_process_console.py  embedded_data_analyzer.py  embedded_data_visualizer.py  gen_x86_handler_stubs.py
tools/hwci/: __init__.py  requirements-frozen.txt  requirements.txt  shell.nix
tools/license-checker/: Cargo.toml  README.md
tools/litex-ci-runner/: Cargo.toml
(+5353 files in other folders)
