[workspace]
members = [
    "arch/cortex-m",
    "arch/cortex-m0",
    "arch/cortex-m0p",
    "arch/cortex-m3",
    "arch/cortex-m4",
    "arch/cortex-m7",
    "arch/riscv",
    "arch/rv32i",
    "boards/acd52832",
    "boards/nano_rp2040_connect",
    "boards/arty_e21",
    "boards/opentitan/earlgrey-cw310",
    "boards/esp32-c3-devkitM-1",
    "boards/clue_nrf52840",
    "boards/hail",
    "boards/hifive_inventor",
    "boards/hifive1",
    "boards/imix",
    "boards/imxrt1050-evkb",
    "boards/litex/arty",
    "boards/litex/sim",
    "boards/msp_exp432p401r",
    "boards/microbit_v2",
    "boards/nordic/nrf52840dk",
    "boards/nordic/nrf52840_dongle",
    "boards/nordic/nrf52dk",
    "boards/sma_q3",
    "boards/nucleo_f429zi",
    "boards/nucleo_f446re",
    "boards/particle_boron",
    "boards/pico_explorer_base",
    "boards/raspberry_pi_pico",
    "boards/apollo3/redboard_artemis_nano",
    "boards/apollo3/lora_things_plus",
    "boards/redboard_redv",
    "boards/stm32f3discovery",
    "boards/stm32f412gdiscovery",
    "boards/stm32f429idiscovery",
    "boards/teensy40",
    "boards/nano33ble",
    "boards/qemu_rv32_virt",
    "boards/swervolf",
    "boards/weact_f401ccu6/",
    "capsules/core",
    "capsules/extra",
    "chips/apollo3",
    "chips/arty_e21_chip",
    "chips/e310_g002",
    "chips/e310_g003",
    "chips/e310x",
    "chips/earlgrey",
    "chips/esp32",
    "chips/esp32-c3",
    "chips/imxrt10xx",
    "chips/litex",
    "chips/litex_vexriscv",
    "chips/lowrisc",
    "chips/msp432",
    "chips/nrf52",
    "chips/nrf52832",
    "chips/nrf52833",
    "chips/nrf52840",
    "chips/nrf5x",
    "chips/qemu_rv32_virt_chip",
    "chips/rp2040",
    "chips/sam4l",
    "chips/sifive",
    "chips/stm32f303xc",
    "chips/stm32f401cc",
    "chips/stm32f429zi",
    "chips/stm32f446re",
    "chips/stm32f412g",
    "chips/stm32f4xx",
    "chips/swerv",
    "chips/swervolf-eh1",
    "chips/virtio",
    "kernel",
    "libraries/enum_primitive",
    "libraries/riscv-csr",
    "libraries/tock-cells",
    "libraries/tock-register-interface",
    "libraries/tickv",
]
exclude = ["tools/"]

[workspace.package]
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2021"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1
