[package]
name = "capsules"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"

[dependencies]
kernel = { path = "../kernel" }
enum_primitive = { path = "../libraries/enum_primitive" }

[dependencies.rubble]
version = "0.0.3"
# TODO: use github or crates.io dependency
path = "../../rubble/rubble"

[dependencies.rubble-nrf5x]
version = "0.0.3"
# TODO: use github or crates.io dependency
path = "../../rubble/rubble-nrf5x"
features = ["52840"]
