# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "kernel-async"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../kernel" }
embedded-hal-async = "1.0.0"

[lints]
workspace = true
