[package]
name = "kernel"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"

[dependencies]
tock-cells = { path = "../libraries/tock-cells" }

[dependencies.tock-registers]
path = "../libraries/tock-register-interface"
features = ["unstable_const_fn"]
