# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tock-registers = { path = "../libraries/tock-register-interface" }
tock-cells = { path = "../libraries/tock-cells" }
tock-tbf = { path = "../libraries/tock-tbf" }
cortex-m-semihosting = "0.5.0"

# In general, Tock discourages the use of cargo features. However for certain
# kernel crate configuration, we have not found reasonable alternatives to
# setting boolean values in kernel/src/config.rs. To make those settings configurable
# without requiring users to modify the kernel crate itself, we allow configuration of
# the values of the global CONFIG constant in kernel/src/config.rs via these features.
# Other uses of cargo features are disallowed.
#
# To use these features, modify your dependency on the kernel crate as follows:
# ```rust
# [dependencies]
# kernel = { path = "../../kernel", features = ["no_debug_panics"] }
# ```
#
# You should only modify the dependency on the kernel crate from your "board"
# crate, as feature unification will ensure that a feature being set by a single
# crate will lead to the feature being enabled for that dependency.
[features]
trace_syscalls = []
debug_load_processes = []
no_debug_panics = []
debug_process_credentials = []
