# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true

# Justification and details on external dependencies, refer to the documentation at
# doc/ExternalDependencies.md#approved-exceptions-for-core-kernel-external-dependencies
[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [ "src/collections{*.rs}" ]

[dependencies]
tock-registers = { path = "../libraries/tock-register-interface" }
tock-cells = { path = "../libraries/tock-cells" }
tock-tbf = { path = "../libraries/tock-tbf" }
flux-rs = { git  = "https://github.com/flux-rs/flux.git", optional=true }

# In general, Tock discourages the use of cargo features. However, we have
# identified two cases where cargo features are the best available solution.
#
# First, for certain kernel crate configuration, we have not found reasonable
# alternatives to setting boolean values in kernel/src/config.rs. To make those
# settings configurable without requiring users to modify the kernel crate
# itself, we allow configuration of the values of the global CONFIG constant in
# kernel/src/config.rs via these features.
#
# To use these features, modify your dependency on the kernel crate as follows:
# ```rust
# [dependencies]
# kernel = { path = "../../kernel", features = ["no_debug_panics"] }
# ```
#
# You should only modify the dependency on the kernel crate from your "board"
# crate, as feature unification will ensure that a feature being set by a single
# crate will lead to the feature being enabled for that dependency.
#
# Second, we use the feature "flux" to workaround limitations of development
# dependencies in cargo. This enables us to use flux-rs without affecting the
# built output. See doc/ExternalDependencies.md#flux-rs for details.
#
# Other uses of cargo features are disallowed.
[features]
trace_syscalls = []
debug_load_processes = []
no_debug_panics = []
debug_process_credentials = []
flux = ["flux-rs"]

[lints]
workspace = true
