# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[workspace]
members = [
    "alert_codes",
    "board-runner",
    "license-checker",
    "litex-ci-runner",
    "qemu-runner",
    "sha256sum",
    "usb/bulk-echo",
    "usb/bulk-test",
    "usb/control-test",
]

[workspace.package]
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2021"
