# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[workspace]
members = [
    "ci/board-runner",
    "ci/license-checker",
    "ci/litex-ci-runner",
    "ci/qemu-runner",
    "build/sha256sum",
    "debugging-and-development/alert_codes",
    "debugging-and-development/usb/bulk-echo",
    "debugging-and-development/usb/bulk-test",
    "debugging-and-development/usb/control-test",
]
resolver = "2"

[workspace.package]
authors = ["Tock Project Developers <devel@lists.tockos.org>"]
edition = "2021"
