# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "cortexm33"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
cortexm = { path = "../cortex-m" }
cortexv7m = { path = "../cortex-v7m" }

[lints]
workspace = true
