[package]
name = "rv32i"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"

[dependencies]
kernel = { path = "../../kernel" }
tock-rt0 = { path = "../../libraries/tock-rt0" }
riscv-csr = { path = "../../libraries/riscv-csr" }

[dependencies.tock-registers]
path = "../../libraries/tock-register-interface"
features = ["unstable_const_fn"]
