[package]
name = "rv32i"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"

[dependencies]
kernel = { path = "../../kernel" }
tock-registers = { path = "../../libraries/tock-register-interface" }
riscv-csr = { path = "../../libraries/riscv-csr" }
riscv = { path = "../riscv" }

