[package]
name = "acd52832"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true

[dependencies]
components = { path = "../components" }
cortexm4 = { path = "../../arch/cortex-m4" }
kernel = { path = "../../kernel" }
nrf52832 = { path = "../../chips/nrf52832" }
nrf52_components = { path = "../nordic/nrf52_components" }

core-capsules = { path = "../../capsules/core" }
extra-capsules = { path = "../../capsules/extra" }