[package]
name = "arty-e21"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
riscv32i = { path = "../../arch/riscv32i" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
arty_exx = { path = "../../chips/arty_exx" }
sifive = { path = "../../chips/sifive" }
