[package]
name = "arty_e21"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true

[dependencies]
components = { path = "../components" }
rv32i = { path = "../../arch/rv32i" }
kernel = { path = "../../kernel" }
arty_e21_chip = { path = "../../chips/arty_e21_chip" }
sifive = { path = "../../chips/sifive" }

core-capsules = { path = "../../capsules/core" }
extra-capsules = { path = "../../capsules/extra" }
